packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_decr@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
-1
│ tests/test_debug.rs:378:14
├─▶ -2
│   ╰ tests/test_debug.rs:377:14
├─▶ -3
│   ╰ tests/test_debug.rs:376:14
├─▶ Root error
│   ╰ tests/common.rs:140:5
├─▶ spantrace with 2 frames (1)
│   ╰ tests/common.rs:140:5
╰─▶ backtrace with [n] frames (1)
    ╰ tests/common.rs:140:5
